kubernetes/helm/resources/apim-gateway-api-operator-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-demo-apim
  labels:
    app.kubernetes.io/part-of: apim-gateway-api-operator-demo
